Fixed More Color Inconsistencies, and planning to shift to purple for btns, etc.

--- a/packages/css/styles.css
+++ b/packages/css/styles.css
@@ -614,7 +614,7 @@ body[data-theme="dark"] #about-me {
   width: auto;
   padding: 5px;
   margin-top: -22px;
-  color: var(--text-color);
+  color: #fff;
   font-weight: bold;
   font-size: 10px;
   transition: 0.3s ease;
@@ -642,7 +642,7 @@ body[data-theme="dark"] #about-me {
   height: 5px;
   width: 5px;
   margin: 0 5px;
-  background-color: var(--primary-color-light-300);
+  background-color: var(--text-color);
   border-radius: var(--border-radius-round);
   display: inline-block;
   transition: background-color 0.3s ease;
@@ -750,7 +750,7 @@ body[data-theme="dark"] .dot {
   gap: 0.75rem;
   padding: 0.8rem 1.8rem;
   background-color: var(--accent-color);
-  color: var(--text-color);
+  color: #fff;
   text-decoration: none;
   border-radius: var(--border-radius-medium);
   font-family: var(--font-heading);
